# flask-board-and-comment-homework

./: README.md  pyproject.toml
app/: __init__.py  config.py
app/extensions/: ioc_container.py
app/extensions/utils/: notification_helper.py  time_helper.py
app/http/requests/: board_request.py  comment_request.py
app/http/responses/: __init__.py
app/http/responses/presenters/: board_presenter.py  comment_presenter.py
app/http/view/: __init__.py  board_view.py  comment_view.py
app/persistence/model/: board_model.py  comment_model.py  keyword_model.py
core/dto/: board_dto.py  comment_dto.py
core/entity/: board_entity.py  comment_entity.py  keyword_entity.py
core/repository/: repository.py
core/schema/: board_schema.py  comment_schema.py
core/usecase_output/: __init__.py
core/usecases/: create_board_usecase.py  create_comment_usecase.py  delete_board_usecase.py  get_boards_usecase.py  get_comments_usecase.py  update_board_usecase.py
migrations/: env.py
migrations/versions/: 017d43180672_create_boards_table.py  1579e65bb856_create_boards_table.py  808165e9ffaa_create_keywords_table.py  9a1ab00ea112_create_comments_table.py  a1dadc0b48ee_create_keywords_table.py  ee1695865bf2_create_boards_table.py  f216acafbcc2_create_comments_table.py
tests/: conftest.py
tests/app/: conftest.py
tests/core/repository/: test_repository.py
tests/core/usecases/: test_create_board_usecase.py  test_create_comment_usecase.py  test_delete_board_usecase.py  test_get_boards_usecase.py  test_get_comments_usecase.py  test_update_board_usecase.py
(+2 files in other folders)
