[tool.poetry]
name = "wanted-flask-homework"
version = "0.1.0"
description = ""
authors = ["copyNdpaste <julsnutini@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
pydantic = "^1.9.1"
Inject = "^4.3.1"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
